--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bluespex.github.io/Robo-friends/",
+  "homepage": "https://bluespex.github.io/Robo-friends",
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
